# async-geotiff

./: CHANGELOG.md  DEVELOP.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: conventional-commits.yml  deploy-mkdocs.yml  release.yml  test.yml
dev-docs/specs/: 2026-05-08-corners-design.md
docs/api/: array.md  colormap.md  enums.md  exceptions.md  geotiff.md  overview.md  raster-array.md  tile.md  tms.md  utils.md  window.md
docs/blog/posts/: introducing-async-geotiff.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: index.html
latest/api/array/: index.html
latest/api/colormap/: index.html
latest/api/enums/: index.html
latest/api/exceptions/: index.html
latest/api/geotiff/: index.html
latest/api/overview/: index.html
latest/api/raster-array/: index.html
latest/api/tile/: index.html
latest/blog/: index.html
latest/search/: search_index.json
src/async_geotiff/: __init__.py  _array.py  _colorinterp.py  _crs.py  _fetch.py  _gdal_metadata.py  _geotiff.py  _overview.py  _photometric.py  _read.py  _tile.py  _tms.py  _transform.py  _windows.py  colormap.py  enums.py  exceptions.py  tms.py  versions.py  windows.py
src/async_geotiff/utils/: __init__.py  _reshape.py
tests/: conftest.py  image_list.py  test_colorinterp.py  test_colormap.py  test_crs.py  test_fetch.py  test_gdal_metadata.py  test_geotiff.py  test_overview.py  test_read.py  test_tms.py  test_windows.py
tests/test_utils/: test_reshape.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0-beta.5/: 404.html
v0.1.0-beta.5/CHANGELOG/: index.html
v0.1.0-beta.5/api/array/: index.html
v0.1.0/CHANGELOG/: index.html
v0.1.0/api/array/: index.html
v0.1.0/api/colormap/: index.html
v0.1.0/api/geotiff/: index.html
v0.1.0/api/overview/: index.html
v0.1.0/api/tms/: index.html
v0.1.0/api/window/: index.html
v0.1.0/blog/: index.html
v0.1.0/search/: search_index.json
v0.2.0/: index.html  sitemap.xml
v0.2.0/api/geotiff/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0-beta.1/: objects.inv  sitemap.xml
v0.3.0-beta.1/CHANGELOG/: index.html
v0.3.0-beta.1/api/array/: index.html
v0.3.0-beta.1/api/colormap/: index.html
v0.3.0-beta.1/api/exceptions/: index.html
v0.3.0-beta.1/api/geotiff/: index.html
v0.3.0-beta.1/api/overview/: index.html
v0.3.0-beta.1/api/tms/: index.html
v0.3.0-beta.1/search/: search_index.json
v0.3.0/CHANGELOG/: index.html
v0.3.0/api/array/: index.html
v0.3.0/api/enums/: index.html
v0.3.0/search/: search_index.json
v0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/CHANGELOG/: index.html
v0.4.0/blog/: index.html
v0.4.0/search/: search_index.json
v0.5.0/: index.html  objects.inv  sitemap.xml
v0.5.0/CHANGELOG/: index.html
v0.5.0/blog/: index.html
v0.5.0/search/: search_index.json
v0.5.1/: index.html  objects.inv  sitemap.xml
v0.5.1/CHANGELOG/: index.html
v0.5.1/search/: search_index.json
(+32 files in other folders)
