[project]
name = "async-geotiff"
version = "0.1.0"
description = "Async GeoTIFF reader for Python"
readme = "README.md"
authors = [{ name = "Kyle Barron", email = "kyle@developmentseed.org" }]
requires-python = ">=3.11"
dependencies = [
    "affine>=2.4.0",
    "async-tiff>=0.4.0",
    "numpy>2",
    "pyproj>=3.7.2",
]

[project.optional-dependencies]
morecantile = ["morecantile>=7.0,<8.0"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "obstore>=0.8.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rasterio>=1.4.4",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["I"]
