[project]
name = "async-geotiff"
version = "0.1.0"
description = "Async GeoTIFF reader for Python"
readme = "README.md"
authors = [{ name = "Kyle Barron", email = "kyle@developmentseed.org" }]
requires-python = ">=3.11"
dependencies = [
    "affine>=2.4.0",
    "async-tiff>=0.4.0",
    "numpy>2",
    "pyproj>=3.7.2",
]

[project.optional-dependencies]
morecantile = ["morecantile>=7.0,<8.0"]

[dependency-groups]
dev = [
    "affine>=3.0rc1",
    "ipykernel>=7.1.0",
    "jsonschema>=4.26.0",
    "morecantile>=7.0.2",
    "obstore>=0.8.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rasterio>=1.4.4",
    "types-jsonschema>=4.26.0.20260109",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = ["fixtures"]

[[tool.mypy.overrides]]
module = [
    # Should be fixed in affine 3.0
    # https://github.com/rasterio/affine/issues/135
    "affine.*",
    "async_tiff.store.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM101",  # raw string in exception
    "FIX002", # todo statements
    "PYI051", # literal strings redundant with str in type union
    "TD002",  # todo without author name
    "TRY003", # define exceptions in the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert
    "SLF001", # private member access
    "D",      # docstring
]
